--- a/cross_section/cross_section_demo.html
+++ b/cross_section/cross_section_demo.html
@@ -6,7 +6,7 @@
         <script src="jquery.ba-tinypubsub.js" type="text/javascript"></script>
         
         <script src="cross_section.js" type="text/javascript"></script>
-        <script src="cross_section_test.js" type="text/javascript"></script>
+        <script src="cross_section_demo.js" type="text/javascript"></script>
         
         <script>
             $(document).ready(function() {
