--- a/cross_section/cross_section_demo.html
+++ b/cross_section/cross_section_demo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="jquery-ui.min.js" type="text/javascript"></script>
-        <script src="jquery.ba-tinypubsub.js" type="text/javascript"></script>
+        <script src="../lib/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="../lib/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="../lib/jquery.ba-tinypubsub.js" type="text/javascript"></script>
         
         <script src="cross_section.js" type="text/javascript"></script>
         <script src="cross_section_demo.js" type="text/javascript"></script>
