--- a/WebContent/test_pages/cross_section_demo.html
+++ b/WebContent/test_pages/cross_section_demo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="../lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="../lib/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="../lib/jquery.ba-tinypubsub.js" type="text/javascript"></script>
+        <script src="../scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="../scripts/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="../scripts/jquery.ba-tinypubsub.js" type="text/javascript"></script>
         
-        <script src="cross_section.js" type="text/javascript"></script>
+        <script src="../scripts/widgets/cross_section.js" type="text/javascript"></script>
         <script src="cross_section_demo.js" type="text/javascript"></script>
         
         <script>
