--- a/WebContent/test_pages/models_demo.html
+++ b/WebContent/test_pages/models_demo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="../lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="../lib/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="../lib/jquery.ba-tinypubsub.js" type="text/javascript"></script>
+        <script src="../scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="../scripts/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="../scripts/jquery.ba-tinypubsub.js" type="text/javascript"></script>
         
         <script src="models.js" type="text/javascript"></script>
         <script src="models_demo.js" type="text/javascript"></script>
