--- a/WebContent/Demos/cross_section_demo.html
+++ b/WebContent/Demos/cross_section_demo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="../scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="../scripts/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="../scripts/jquery.ba-tinypubsub.js" type="text/javascript"></script>
+        <script src="../scripts/vendor/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="../scripts/vendor/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="../scripts/vendor/jquery.ba-tinypubsub.js" type="text/javascript"></script>
         
         <script src="../scripts/widgets/cross_section.js" type="text/javascript"></script>
         <script src="cross_section_demo.js" type="text/javascript"></script>
