Created demo page for dynamic plot.

--- a/WebContent/Demos/multiplot_demo.html
+++ b/WebContent/Demos/multiplot_demo.html
@@ -23,7 +23,7 @@
     <body>
         
         <h1>Multi plot graph demo page</h1>
-        <p>Instructions: Please replace the generic subscriber with the graph.</p>
+        <p>Instructions: Please replace the generic subscriber with the airway resistance vs methacholine graph from the AHR page.</p>
         
         <div id="S_publisher"></div>
         <div id="log_d_publisher"></div>
