--- a/WebContent/Demos/slider_demo.html
+++ b/WebContent/Demos/slider_demo.html
@@ -29,11 +29,13 @@
     <body>
 
         <h1>Sliders demo page</h1>
-        <p>Instructions: Please replace the generic publishers with sliders</p>
 
 
-        <div id="slider1" class="slider"></div>
-        <div id="slider2" class="slider"></div>
+        <div id="severity_slider" class="slider"></div>
+        <span id="severity_value"></span>
+
+        <div id="dose_slider" class="slider"></div>
+        <span id="dose_value"></span>
         
         <br/>
         
