--- a/WebContent/Demos/demo_template.html
+++ b/WebContent/Demos/demo_template.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="../scripts/vendor/jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="../scripts/vendor/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="../scripts/vendor/jquery.ba-tinypubsub.js" type="text/javascript"></script>
+        <script src="../vendor/jquery/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script src="../vendor/jqueryui/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="../vendor/tinypubsub/jquery.ba-tinypubsub.js" type="text/javascript"></script>
         
-        <script src="demo.js" type="text/javascript"></script>
+        <script src="./js/demo.js" type="text/javascript"></script>
         
         <script>
             $(document).ready(function() {
