--- a/WebContent/Demos/cross_section_demo.html
+++ b/WebContent/Demos/cross_section_demo.html
@@ -50,7 +50,7 @@
         <div id="rc_div"></div>
         <div id="rd_div"></div>
         
-        <div id="diagram_div" style = "float: left;"></div>
+        <div id="diagram_div" style = "float: left; width: 275px"></div>
         
     </body>
 </html>
