--- a/WebContent/AHR_poor.html
+++ b/WebContent/AHR_poor.html
@@ -33,8 +33,8 @@
         <table style="width:100%">
             <tr style="height:300px">
                 <td style="width:50%; vertical-align: top;">
-                    <div id="discrete_slider"></div>
-                    <div id="continuous_slider"></div>
+                    <div id="discrete" class="severity"></div>
+                    <div id="continuous" class="dose"></div>
                 </td>
                 <td style="width:50%">
                     <div id="multi_plot"></div>
