Updated the spinners on the param page

--- a/WebContent/param_poor.html
+++ b/WebContent/param_poor.html
@@ -33,17 +33,17 @@
         <table style="width:100%">
             <tr style="height:100px">
                 <td colspan="2" style="vertical-align: top;">
-                    <div id="A_spinner" style = "float: left"></div>
-                    <div id="B_spinner" style = "float: left"></div>
-                    <div id="C_spinner" style = "float: left"></div>
-                    <div id="D_spinner" style = "float: left"></div>
+                    <input id="A_spinner" type="text" maxlength="5">
+					<input id="B_spinner" type="text" maxlength="5">
+					<input id="C_spinner" type="text" maxlength="5">
+					<input id="D_spinner" type="text" maxlength="5">
                 </td>
             </tr>
             <tr style="height:100px">
                 <td colspan="2" style="vertical-align: top;">
-                    <div id="xmax_spinner" style = "float: left"></div>
-                    <div id="y_spinner" style = "float: left"></div>
-                    <div id="z_spinner" style = "float: left"></div>
+                    <input id="xmax_spinner" type="text" maxlength="5">
+					<input id="y_spinner" type="text" maxlength="5">
+					<input id="z_spinner" type="text" maxlength="5">
                 </td>
             </tr>
             <tr style="height:300px">
