--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="CSS/styles.css">
-	<body>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="CSS/styles.css">
+<body>
 
-		<div class="HeaderTop">
-			<img id="Logo" src="Media/uwaLogo.svg">
-		</div>
-		
-			
-			<div class="ModelSelect" id="Model1Select">
-			  	<a href="Example.html">
-				    <h2>Model 1</h2>
-				    <p id="model1text">Modeling contraction of the airway during asthma and the effect of relievers.</p>
-				    <img src="Media/model1Image.png" width="200" height="190">
-				</a>
-			</div>
-			
-			
-			<div class="ModelSelect" id="Model2Select">
-				<a href="Example2.html">
-			    	<h2>Model 2</h2>
-			    	<p id="model2text">Modeling the effect of methacholine on the airway.</p>
-			    	<img src="Media/model2Image.png" width="250" height="200">
-			 	</a>
-			 </div>
-			
-			
-			<div class="ModelSelect" id="Model3Select">
-			  	<a href="Example3.html">
-				    <h2>Model 3</h2>
-				    <p id="model3text">An extension of the first model allowing for the generation of airways to be adjusted.</p>
-				    <img src="Media/model3Image.png" width="250" height="125">
-				</a>
-			</div>
-		
-		<div class="Footer">
-			<h1 id="footerText"> UWA Pharmacology - Why We Wheeze?</h1>
-			<h3 id="FooterText"> Prototype Version 1: Index Page </h3>
-		</div>
+<div class="HeaderTop">
+<img id="Logo" src="Media/uwaLogo.svg">
+</div>
 
-	</body>
+<div class="Models">
+
+<a href="Example.html">
+  <div class="Model1">
+    <h2>Model 1</h2>
+    <p id="model1text">Modeling contraction of the airway during asthma and the effect of relievers.</p>
+
+    <div id ="Model1Image">
+    <img src="Media/model1Image.png" width="200" height="190">
+    </div>
+  </div>
+</a>
+
+<a href="Example2.html">
+  <div class="Model2">
+    <h2>Model 2</h2>
+    <p id="model2text">Modeling the effect of methacholine on the airway.</p>
+
+    <div id ="Model2Image">
+    <img src="Media/model2Image.png" width="250" height="200">
+    </div>
+  </div>
+</a>
+
+<a href="Example3.html">
+  <div class="Model3">
+    <h2>Model 3</h2>
+    <p id="model3text">An extension of the first model allowing for the generation of airways to be adjusted.</p>
+
+    <div id ="Model3Image">
+    <img src="Media/model3Image.png" width="250" height="125">
+    </div>
+  </div>
+</a>
+
+</div>
+
+<div class="Footer">
+<h1 id="footerText"> UWA Pharmacology - Why We Wheeze?</h1>
+<h3 id="FooterText"> Prototype Version 1: Index Page </h3>
+</div>
+
+</body>
 </html>
 
