--- a/WebContent/PlaceHolder_First_Page.html
+++ b/WebContent/PlaceHolder_First_Page.html
@@ -6,9 +6,8 @@
         <script src="vendor/d3/d3.js" type="text/javascript"></script>
         <script src="vendor/nouislider/jquery.nouislider.all.min.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="vendor/nouislider/jquery.nouislider.min.css">
-            <link rel="stylesheet" type="text/css" href="vendor/nouislider/jquery.nouislider.pips.min.css">
-        
-        
+        <link rel="stylesheet" type="text/css" href="vendor/nouislider/jquery.nouislider.pips.min.css">
+        <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
         <script type="text/javascript" src="widgets/slider/slider.js"></script>
         <link rel="stylesheet" type="text/css" href="widgets/slider/slider.css">
         <script src="widgets/cross_section/cross_section.js" type="text/javascript"></script>
