--- a/WebContent/PlaceHolder_First_Page.html
+++ b/WebContent/PlaceHolder_First_Page.html
@@ -27,6 +27,7 @@
         <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
        
         <link rel="stylesheet" type="text/css" href="widgets/slider/slider.css">
+    <link rel="stylesheet" type = "text/css" href="./PlaceHolder_First_Page.css">
 </head>
    
    
