--- a/WebContent/PlaceHolder_First_Page.html
+++ b/WebContent/PlaceHolder_First_Page.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" type="text/css" href="vendor/nouislider/jquery.nouislider.pips.min.css">
         <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
        
-         <link rel="stylesheet" type = "text/css" href="..CSS/page1.css">
+         <link rel="stylesheet" type = "text/css" href="../CSS/page1.css">
 </head>
    
    
