Removed animate option.
Functions fine without slow animation.  Consider it as an additional
feature, to do later.

--- a/WebContent/demos/single_plot_demo2.html
+++ b/WebContent/demos/single_plot_demo2.html
@@ -19,7 +19,7 @@
                 };
                 
                 $("#log_d_publisher").my_publisher_buttons({channel : "demo/", topic : "logd", value : -9});
-                $("#graph1").single_plot_d3({channel : "demo/", model : sigmoid_fcn, animate: true});
+                $("#graph1").single_plot_d3({channel : "demo/", model : sigmoid_fcn});
 
                 alert("Page loaded successfully!");
             });
