--- a/WebContent/param_poor.html
+++ b/WebContent/param_poor.html
@@ -44,13 +44,13 @@
         					 <!-- relative positioning --> 
          						 <div class="col-lg-8">
            							
-                                    	<div class = "col-lg-2 col-lg-offset-1"><input id="A_spinner" type="text"  maxlength="5"> </div>   
-										<div class = "col-lg-2 col-lg-offset-1"><input id="B_spinner" type="text" maxlength="5" > </div>   
-										<div class = "col-lg-2 col-lg-offset-1"><input id="C_spinner" type="text" maxlength="5"> </div>   
-										<div class = "col-lg-2 col-lg-offset-1"><input id="D_spinner" type="text" maxlength="5"> </div>  
-                                        <div class = "col-lg-3 col-lg-offset-1"><input id="xmax_spinner" type="text" maxlength="5"></div> 
-										<div class = "col-lg-3 col-lg-offset-1"><input id="y_spinner" type="text" maxlength="5"></div> 
-										<div class = "col-lg-3 col-lg-offset-1"><input  id="z_spinner" type="text" maxlength="5"></div>      
+                                    	<div class = "col-lg-3"><input id="A_spinner" type="text"  maxlength="5"> </div>
+										<div class = "col-lg-3"><input id="B_spinner" type="text" maxlength="5" > </div>
+										<div class = "col-lg-3"><input id="C_spinner" type="text" maxlength="5"> </div>
+										<div class = "col-lg-3"><input id="D_spinner" type="text" maxlength="5"> </div>
+                                        <div class = "col-lg-3"><input id="xmax_spinner" type="text" maxlength="5"></div>
+										<div class = "col-lg-3"><input id="y_spinner" type="text" maxlength="5"></div>
+										<div class = "col-lg-3"><input  id="z_spinner" type="text" maxlength="5"></div>
                                                                  
                                   </div>    
 
