--- a/WebContent/AHR_poor.html
+++ b/WebContent/AHR_poor.html
@@ -8,6 +8,7 @@
       <script src="vendor/d3/d3.js" type="text/javascript"></script>
       <script src="vendor/nouislider/jquery.nouislider.all.min.js" type="text/javascript"></script>
       <link rel="stylesheet" type="text/css" href="vendor/nouislider/jquery.nouislider.min.css">
+       <link rel="stylesheet" type="text/css" href="widgets/slider/AHR.css">
       <link rel="stylesheet" type="text/css" href="vendor/nouislider/jquery.nouislider.pips.min.css">
       <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
       <script type="text/javascript" src="widgets/slider/slider.js"></script>
