--- a/WebContent/AHR_poor.html
+++ b/WebContent/AHR_poor.html
@@ -16,7 +16,7 @@
       <script src="widgets/cross_section/cross_section_d3.js" type="text/javascript"></script>
       <script src="widgets/multi_plot/multi_plot_d3.js" type="text/javascript"></script>
       <script src="widgets/single_plot/single_plot_d3.js" type="text/javascript"></script>
-      <script src="models/airway_model.js" type="text/javascript"></script>
+      <script src="models/airway_model_B.js" type="text/javascript"></script>
       <script src="js/AHR_script.js" type="text/javascript"></script>
    </head>
    <body>
