--- a/WebContent/param_poor.html
+++ b/WebContent/param_poor.html
@@ -22,7 +22,7 @@
 	  
       <script src="widgets/cross_section/cross_section_d3.js" type="text/javascript"></script>
       <script src="widgets/dynamic_plot/dynamic_plot_d3.js" type="text/javascript"></script>
-      <script src="models/airway_model.js" type="text/javascript"></script>
+      <script src="models/airway_model_B.js" type="text/javascript"></script>
       <script src="js/param_script.js" type="text/javascript"></script>
    </head>
 <body>
