--- a/WebContent/param_poor.html
+++ b/WebContent/param_poor.html
@@ -28,7 +28,7 @@
 <body>
 <h3 class="text-primary text-center"> <strong>How change in airway dimensions impact the </strong> log <strong> <em>d</em> versus <em>R</em> plot</strong></h3>
 <h4 class="text-center">Observe how changing the physical dimensions and properties of the airways impact on methacholine-induced increases in airway resistance.</h4>
-<p class="col-lg-offset-1">\[R\propto  \frac{1}{(A^2( 1-\frac{x_{max}}{1+10^{(logEC_{50}-logd).H}})^2-B/\pi-C/\pi(1+y)-D/\pi(1+z))^2}\]</p>
+<p class="col-lg-offset-1">\[R\propto  \frac{1}{(A^2( 1-\frac{x_{max}}{1+10^{logEC_{50}-logd}})^2-B/\pi-C(1+y)/\pi-D(1+z)/\pi)^2}\]</p>
       <!-- relative positioning --> 
           
 <div class = "col-md-3 col-sm-offset-0 col-sm-3 col-md-offset-1 col-lg-offset-2 col-xs-3 col-lg-2" >         
