Now can set widget width as an option
Height = width.

--- a/WebContent/Demos/cross_section_demo.html
+++ b/WebContent/Demos/cross_section_demo.html
@@ -51,7 +51,7 @@
         <div id="rc_div"></div>
         <div id="rd_div"></div>
         
-        <div id="diagram_div" style = "float: left; width: 275px"></div>
+        <div id="diagram_div" style = "float: left; width: 275px;"></div>
         
     </body>
 </html>
