--- a/WebContent/param_poor.html
+++ b/WebContent/param_poor.html
@@ -7,13 +7,6 @@
 	  
       <script src="vendor/tinypubsub/jquery.ba-tinypubsub.js" type="text/javascript"></script>
       <script src="vendor/d3/d3.js" type="text/javascript"></script>
-      <script type="text/x-mathjax-config">
-         MathJax.Hub.Config({
-           CommonHTML: {
-         	scale: 100
-           }
-         });
-      </script>
       <link rel="stylesheet" type = "text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	  
       <script type="text/javascript" src="widgets/spinner/spinner.js"></script>
@@ -28,7 +21,9 @@
 <h3 class="text-primary text-center"> <strong>How change in airway dimensions impact the </strong> log <strong> <em>d</em> versus <em>R</em> plot</strong></h3>
 <h4 class="text-center">Observe how changing the physical dimensions and properties of the airways impact on methacholine-induced increases in airway resistance.</h4>
 
-<img class="col-sm-6 col-sm-offset-3" src="media/equation.svg"/>
+<div class ="row" >
+    <img class="col-sm-6 col-sm-offset-3" src="media/equation.svg" />
+</div>
 
       <!-- relative positioning --> 
           
