--- a/WebContent/AHR_poor.html
+++ b/WebContent/AHR_poor.html
@@ -23,7 +23,7 @@
       <div class ="row" >
          <!-- cut in half -->
          <div id="title" class="text-primary">Airway Hyperresponsiveness</div>
-         <div class="col-lg-4 col-lg-offset-2">
+         <div class="col-md-4 col-md-offset-2">
             <div id = "asthma-text"> Select the severity of asthma </div>
             <div id="discrete" class="severity"></div>
             <div id = "methacholine-text">  Adjust the dose of methacholine </div>
@@ -31,7 +31,7 @@
             <div id="cross-section-text"> Cross section of airway wall</div>
             <div id="cross_section"> </div>
          </div>
-         <div class="col-lg-4 ">
+         <div class="col-md-4 ">
                <div id="multi_plot"> </div>
                <div id="single_plot"> </div>
            
