Cleaned up and added readme

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,7 +21,7 @@
   </div>
 </a>
 
-<a href="Example2.html">
+<a href="AHR.html">
   <div class="Model2">
     <h2>Model 2</h2>
     <p id="model2text">Modeling the effect of methacholine on the airway.</p>
@@ -32,7 +32,7 @@
   </div>
 </a>
 
-<a href="Example3.html">
+<a href="param.html">
   <div class="Model3">
     <h2>Model 3</h2>
     <p id="model3text">An extension of the first model allowing for the generation of airways to be adjusted.</p>
